# Elecraft-Genius-Bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.aethersdr-compat-readonly.yaml  config.aethersdr-compatible-operational.yaml  config.aethersdr-known-good.yaml  config.aethersdr-kpa-band-follow-test.yaml  config.aethersdr-last-known-good-operational.yaml  config.aethersdr-last-known-good-real-controls.yaml  config.aethersdr-operational.yaml  config.aethersdr-production.yaml  config.aethersdr-real-operational.yaml  config.example.yaml  config.flex-injection-readonly.yaml  config.hardware-control-local-only.yaml  config.hardware-readonly.yaml  config.mock.yaml  config.smartsdr-pgxl-meter-test.yaml  config.smartsdr-stability.yaml
.github/workflows/: ci.yml
crates/bridge-core/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/egb/: Cargo.toml  build.rs
crates/egb-gui/: Cargo.toml  build.rs
crates/egb-gui/src/: main.rs
crates/egb/src/: main.rs
crates/elecraft-kat500/: Cargo.toml
crates/elecraft-kpa500/: Cargo.toml
crates/elecraft-kpa500/src/: lib.rs
crates/flex-injection/: Cargo.toml
crates/pgxl-emulator/: Cargo.toml
crates/test-harness/: Cargo.toml
crates/tgxl-emulator/: Cargo.toml
docs/: aethersdr-amp-button-command-path.md  aethersdr-amp-button-final-root-cause.md  aethersdr-amp-button-gating-final.md  aethersdr-amp-button-gating.md  aethersdr-amp-button-instrumentation-patch.md  aethersdr-amp-button-no-command-final.md  aethersdr-amp-button-source-trace.md  aethersdr-amp-command-gating-proof.md  aethersdr-amp-control-eligibility-proof.md  aethersdr-compatibility-profile.md  aethersdr-final-behaviour-analysis.md  aethersdr-pgxl-delay-final.md  aethersdr-pgxl-open-trigger.md  aethersdr-production-baseline.md  aethersdr-setup.md  amplifier-operate-lab.md  amplifier-removal-root-cause.md  amplifier-removed-live-root-cause.md  band-follow-operational-status.md  build-windows.md  code-review-remediation.md  configuration.md  control-lab.md  controls-safety.md  dependency-review.md  development-environment.md  diagnostics-export.md  elecraft-command-mapping.md  elecraft-command-semantics.md  elecraft-mapping-table.md  evidence-bundles.md  final-protocol-compliance-audit.md  flex-amplifier-state-reannounce-mechanism.md  flex-amplifier-status-fields.md  flex-control-capability-audit.md  flex-control-semantic-variants.md  flex-interlock-empty-amplifier-analysis.md  flex-interlock-runtime-implementation.md  flex-interlock-semantic-audit.md  flex-lifecycle-state-machine.md  (+58 more)
docs/analysis/: aethersdr-amp-parser-notes.md  aethersdr-applet-activation.md  aethersdr-button-analysis.md  aethersdr-control-enablements.md  aethersdr-disconnect-analysis.md  aethersdr-pgxl-connect-trigger.md  aethersdr-session-sequence.md  aethersdr-ui-activation-phase16.md  flex-frequency-kat500-band-tracking.md  pgxl-applet-non-proxy-options.md  pgxl-direct-connection-debugging.md  pgxl-pairing-audit.md  pgxl-smartsdr-gap-analysis.md  radio-stripped-amplifier-fields.md  smartsdr-interlock-deep-analysis.md
docs/architecture/: controlled-operate-design.md  flex-amplifier-injection.md  flex-api-proxy-design.md  minimal-flex-amplifier-injection.md  phase-1-architecture.md  replay-harness-design.md
docs/packet-captures/: README.md
docs/protocol-analysis/: aethersdr-source-map.md  pgxl.md  tgxl.md
docs/state-machines/: README.md
docs/validation/: aethersdr-applet-visibility-test.md  aethersdr-binary-source-match.md  aethersdr-layout-reset.md  aethersdr-mock-validation.md  aethersdr-session-report-template.md  aethersdr-v26-5-2-results.md  elecraft-hardware-validation.md  flex-api-capture.md  live-hardware-session.md  local-tcp-smoke-test.md  real-hardware-results.md  serial-timeout-troubleshooting.md  smartsdr-tuner-success.md
scripts/: inspect-aethersdr-source.ps1
scripts/aethersdr/: reset-applet-layout.sh
scripts/windows/: check.ps1  (+6 more)
(+26 files in other folders)
