[package]
name = "egb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
bridge-core = { path = "../bridge-core" }
clap.workspace = true
egb-config = { path = "../config" }
elecraft-kat500 = { path = "../elecraft-kat500" }
elecraft-kpa500 = { path = "../elecraft-kpa500" }
flex-injection = { path = "../flex-injection" }
pgxl-emulator = { path = "../pgxl-emulator" }
serde_json.workspace = true
serde_yaml.workspace = true
test-harness = { path = "../test-harness" }
tgxl-emulator = { path = "../tgxl-emulator" }
tokio.workspace = true
tokio-serial.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true

[[bin]]
name = "egb"
path = "src/main.rs"
