[package]
name = "elecraft-kpa500"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bridge-core = { path = "../bridge-core" }
tokio.workspace = true
tokio-serial.workspace = true
tracing.workspace = true

